
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Add ability to view permissions inherited when viewing an ACL row in a grid
- [#2834] Fix issue where constraint class was not set on new FC rules
- [#2819] Fix issue with FC rules and execution order due to setting default templates, constraints
- [#2830] Permit ability to change FC Set Template when editing a FC Set
- [#2827] Fix issues related to FC upgrade with Rules with comma-separated names, differing constraints, and template setting
- Fix issue related to #2625 with deferred tabpanel rendering that caused unpublishing when using Quick Update/Create
- [#2825] Append idx to each item DOM id when using HTML tag tv output widget
- [#2823] Add missing lexicon entry for TV output type
- [#2817] Reorder System top menu for easier navigation
- [#2820] Add DOM id to Profile page tabs
- [#2814] Add longtitle, description, template to Quick Update/Create
- [#2789] Add check to make sure safe_mode is off in setup
- [#2565] Improve Quick Create/Update Resource to move settings into tab rather than fieldset
- [#2807] Add tree_default_sort System Setting for configuring the default sort setting for the Resource tree
- [#2803] Fix css issue with portal blocks on manager dashboard in Fx
- Add new Form Customization UI, including Form Customization Profiles and Sets; much easier editing of FC rules
- Fix issue with modInstallSmarty constructor due to Smarty upgrade
- [#2799] Remove ext3 debug files to save space
- [#2801] Fix bug with checkbox tvs without specified value options
- Upgrade Smarty to 3.0.4
- [#2782] Add changelog to Package View page
- [#2782] Add ability to view changelog when installing a package via the "changelog" package attribute (similar to readme)
- [#2770] Ensure email TV input type validates email